--- a/projet/ml_app/templates/predict.html
+++ b/projet/ml_app/templates/predict.html
@@ -19,6 +19,7 @@
 
     {% if prediction %}
         <h2>Le prix prédit de la maison est: {{ prediction }}$</h2>
-    {% endif %}
+    {% endif %}<br>
+	<a href="/">Retour à l'accueil</a>
 </body>
 </html>
