--- a/projet/ml_app/templates/home.html
+++ b/projet/ml_app/templates/home.html
@@ -12,5 +12,7 @@
     </p>
     <a href="/predict"><button>Prédire le prix d'une maison</button></a><br><br>
     <a href="/monitoring"><button>Voir les statistiques du modèle</button></a>
+	<a href="http://localhost:8001" target="_blank"><button>Accéder à MLflow</button></a>
+
 </body>
 </html>
